completed parts 4 and 5

--- a/views/pokemon/index.ejs
+++ b/views/pokemon/index.ejs
@@ -1,6 +1,13 @@
-<h1>Favorite Pokemon</h1>
 
+<h1>Favorite Pokemon</h1>
+<ul>
 <% favorites.forEach(pokemon => { %>
-    <%= pokemon.name %> 
-    <br>
+    <li> 
+        <a href="/pokemon/<%= pokemon.name %>">   
+        <%= pokemon.name %> 
+        </a>
+    </li>
 <% }) %>
+</ul>
+
+
