--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 class="text-center">The Original 151 Pokemon</h1>
-  <p class="text-center">
+  <p class="text-center" id="to-favorites">
     <a href="/pokemon">Favorites</a>
   </p>
 
@@ -9,6 +9,7 @@
       <h2><%= pokemon.name %></h2>
       <form method="POST" action="/pokemon">
         <input hidden type="text" name="name" value="<%= pokemon.name %>">
+        <input hidden type="text" name="sprite" value="<%= pokemon.name %>">
         <button class="btn btn-primary" type="submit">Add to Favorite Pokemon</button>
       </form>
     </div>
